--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -13,11 +13,35 @@ body {
   font-family: var(--bodyFont);
   color: var(--bodyTextColor);
   margin: 0;
-  font-size: 16px;
+  font-size: 20px;
   display: flex;
   flex-direction: column;
   height: 100vh;
   max-width: 1440px;
+}
+
+.headerContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.headerLogo {
+  margin: 20px 0;
+  width: 200px;
+}
+
+.launchHeader {
+  color: var(--gray);
+  font-size: 3.5rem;
+  text-align: center;
+  font-weight: 300;
+}
+
+.launchSpan {
+  color: var(--darkBlue);
+  font-size: 3.5rem;
+  font-weight: 600;
 }
 
 /* mobile media queries */
