--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -58,6 +58,13 @@ body {
   margin: 10px 0 10px 0;
 }
 
+.inputSection,
+.dashboardSection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .notifyInput {
   border-radius: 2rem;
   border: 1px solid var(--blue);
@@ -74,6 +81,11 @@ body {
   width: 140px;
   height: 44px;
   margin-left: 20px;
+}
+
+.dashboardImg {
+  width: 600px;
+  margin: 10px 0;
 }
 
 /* mobile media queries */
